[project]
name = "public-audit"
version = "0.1.0"
description = ""
authors = [
    {name = "floopy",email = "tanapat@curialab.xyz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.123.0,<0.124.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
